<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.comercioemrede.view.TelaCadastroPRO">

    <TextView
        android:id="@+id/textView"
        android:layout_width="209dp"
        android:layout_height="56dp"
        android:text="@string/cadastrar_produto"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <LinearLayout
        android:layout_width="391dp"
        android:layout_height="547dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="11dp">

        <ImageView
            android:id="@+id/imgFotoPRO"
            android:layout_width="match_parent"
            android:layout_height="217dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@android:mipmap/sym_def_app_icon" />

        <EditText
            android:id="@+id/edtNomePRO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nome_do_produto"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtTipoPRO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/tipo_de_produto"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtQuantidadePRO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/quantidade_do_produto"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtPrecoPRO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/preco_do_produto"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnSalvarPRO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar_produto" />

        <Button

            android:id="@+id/btnEnviarFotoPRO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviar_foto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
