<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:screenOrientation="portrait"
    tools:context=".view.TelaCadastroLOJ">

    <Button
        android:id="@+id/bttnCadastroLOJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botao_redondo_solido_azul"
        android:text="@string/cadastrar_cli"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.900
" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="461dp"
        android:layout_height="240dp"
        android:contentDescription="@string/bgRC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/wave_bg_2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="299sp"
        android:layout_height="147sp"
        android:contentDescription="@string/logoRC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/logon" />

    <EditText
        android:id="@+id/nomeLOJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""

        android:drawableBottom="@drawable/linha_azul"
        android:hint="@string/nome_da_loja"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="@color/colorSafeBlue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <EditText
        android:id="@+id/emailLoginLOJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""

        android:drawableBottom="@drawable/linha_azul"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="@color/colorSafeBlue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.390" />

    <EditText
        android:id="@+id/telefoneLOJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""

        android:drawableBottom="@drawable/linha_azul"
        android:hint="@string/telefoneCLI"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="@color/colorSafeBlue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475" />

    <EditText
        android:id="@+id/cnpjLOJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""

        android:drawableBottom="@drawable/linha_azul"
        android:hint="@string/cnpj"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="@color/colorSafeBlue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.560" />

    <EditText
        android:id="@+id/enderecoLOJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""

        android:drawableBottom="@drawable/linha_azul"
        android:hint="@string/cep"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="@color/colorSafeBlue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.645" />

    <EditText
        android:id="@+id/senhaLoginLOJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""

        android:drawableBottom="@drawable/linha_azul"
        android:hint="@string/senhaCLI"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="@color/colorSafeBlue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.730" />

    <EditText
        android:id="@+id/confirmarSenhaLOJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""

        android:drawableBottom="@drawable/linha_azul"
        android:hint="@string/confirmar_senhaCLI"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="@color/colorSafeBlue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="abrirLoginLOJ"
        android:text="@string/fazer_login"
        android:textColor="#0027FF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ja_possui_uma_conta"
        android:textColor="#6E6E6E"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />


</androidx.constraintlayout.widget.ConstraintLayout>