<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:screenOrientation="portrait"
    tools:context=".view.TelaLoginCLI">

    <Button
        android:id="@+id/bttnLoginCLI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botao_redondo_solido_azul"
        android:text="@string/loginCLI"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848" />

    <TextView
        android:id="@+id/txtCadastrarCLI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="abrirCadastro"
        android:text="@string/cadastrar"
        android:textColor="#0027FF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttnLoginCLI"
        app:layout_constraintVertical_bias="0.202" />

    <TextView
        android:id="@+id/txtMensagemCLI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/n_o_possui_um_conta"
        android:textColor="#6E6E6E"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtCadastrarCLI"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttnLoginCLI"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="461dp"
        android:layout_height="240dp"
        android:contentDescription="@string/bgRC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/wave_bg_2" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="299sp"
        android:layout_height="147sp"
        android:contentDescription="@string/logoRC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/emailLoginCLI"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:autofillHints=""

        android:drawableBottom="@drawable/linha_azul"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="@color/colorSafeBlue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400" />

    <EditText
        android:id="@+id/senhaLoginCLI"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:autofillHints=""

        android:drawableBottom="@drawable/linha_azul"
        android:hint="@string/senhaCLI"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="@color/colorSafeBlue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginCLI"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/txtEsqueciCLI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:onClick="recuperarSenha"
        android:text="@string/esqueceu_a_senha"
        android:textColor="#0027FF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senhaLoginCLI"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>