<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:screenOrientation="portrait"
    tools:context=".view.TelaLoginLOJ">

    <Button
        android:id="@+id/bttnLoginLOJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botao_redondo_solido_azul"
        android:text="@string/loginLOJ"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.900" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="461dp"
        android:layout_height="240dp"
        android:contentDescription="@string/bgRC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/wave_bg_2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="299sp"
        android:layout_height="147sp"
        android:contentDescription="@string/logoRC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/logon" />

    <EditText
        android:id="@+id/emailLoginLOJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""

        android:drawableBottom="@drawable/linha_azul"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:imeOptions="actionNext"
        android:textColor="#000000"
        android:textColorHint="@color/colorSafeBlue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400" />

    <EditText
        android:id="@+id/senhaLoginLOJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""

        android:drawableBottom="@drawable/linha_azul"
        android:hint="@string/senhaCLI"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="@color/colorSafeBlue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginLOJ"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/txtEsqueciLOJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/esqueceu_a_senha"
        android:onClick="recuperarSenha"
        android:textColor="#0027FF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senhaLoginLOJ"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtCadastrarLOJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:textColor="#0027FF"
        android:textSize="18sp"
        android:onClick="abrirCadastroLOJ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <TextView
        android:id="@+id/txtMensagemLOJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Não possui uma conta?"
        android:textColor="#6E6E6E"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />


</androidx.constraintlayout.widget.ConstraintLayout>